--- a/css/style.css
+++ b/css/style.css
@@ -2392,7 +2392,7 @@ i:before {
 
 .footer_copyright {
   overflow: hidden;
-  background: #11173b;
+  background: #e0b6db;
   padding: 35px 0px;
 }
 
