--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -90,7 +90,7 @@
 }
 .footer_copyright{
     overflow: hidden;
-    background: #11173b;
+    background: #e0b6db;
     padding: 35px 0px;
     .float-sm-left{
         h5{
