--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ figure figcaption {
 }
 
 .site-section {
-  padding: 7rem 0;
+  padding: 5rem 0;
 }
 
 .section-heading {
@@ -1156,6 +1156,14 @@ figure figcaption {
 
 .burger:focus {
   outline: none;
+}
+/*custom qr css*/
+.cta-qr-code {
+  background: linear-gradient(#ffffff, #ffffff) padding-box, linear-gradient(-45deg, #274685, #3db3c5) border-box;
+  border-radius: 16px;
+  border: 4px solid transparent;
+  margin: 20px;
+  padding: 32px 40px;
 }
 
 /*--------------------------------------------------------------
