--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  color: #9fa1a4;
+  color: #03030378;
   line-height: 1.5;
 }
 
@@ -161,7 +161,7 @@ figure figcaption {
 }
 
 .feature-1 p {
-  color: #b1b1b1;
+  color: #03030378;
 }
 
 /* Step */
@@ -1159,11 +1159,17 @@ figure figcaption {
 }
 /*custom qr css*/
 .cta-qr-code {
-  background: linear-gradient(#ffffff, #ffffff) padding-box, linear-gradient(-45deg, #274685, #3db3c5) border-box;
+  background: linear-gradient(to right, #274685 0%, #3db3c5 100%);
   border-radius: 16px;
-  border: 4px solid transparent;
   margin: 20px;
   padding: 32px 40px;
+}
+
+.cta-qr-code h2{
+  color: #fff;
+}
+.cta-qr-code p{
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
