--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ figure figcaption {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #2d71a1;
+  background: #58C69B;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -113,14 +113,14 @@ figure figcaption {
 }
 
 .btn.btn-outline-white {
-  border: 2px solid #fff;
-  background: none;
+  border: 2px solid #58C69B;
+  background: #58C69B;
   color: #fff;
 }
 
 .btn.btn-outline-white:hover {
-  background: #fff;
-  color: #2d71a1;
+  background: #58C69B;
+  color: #fff;
 }
 
 .btn.btn-primary {
@@ -143,7 +143,7 @@ figure figcaption {
 }
 
 .feature-1 .wrap-icon.icon-1 {
-  background: linear-gradient(-45deg, #3b87bd, #2d71a2);
+  background: linear-gradient(-45deg, #58c69b, #58c69b);
 }
 
 .feature-1 .wrap-icon .icon {
@@ -328,6 +328,7 @@ figure figcaption {
 .cta-section {
   background: linear-gradient(to right, #274685 0%, #3db3c5 100%);
   color: #fff;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
 }
 
 .cta-section h2 {
@@ -337,7 +338,7 @@ figure figcaption {
 }
 
 .cta-section .btn {
-  background: #000000;
+  background: #58c69b;
   color: #fff;
 }
 
@@ -393,11 +394,11 @@ figure figcaption {
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-  color: #2d71a1 !important;
+  color: #58c69b !important;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active a {
-  color: #2d71a1 !important;
+  color: #58c69b !important;
 }
 
 .sticky-wrapper .shrink {
@@ -664,7 +665,7 @@ figure figcaption {
 --------------------------------------------------------------*/
 
 .hero-section {
-  background: linear-gradient(to right, rgba(39, 70, 133, 0.8) 0%, rgba(61, 179, 197, 0.8) 100%), url(../img/hero-bg.jpg);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/hero-bg.jpg);
   position: relative;
 }
 
@@ -1175,11 +1176,12 @@ figure figcaption {
 .sticky-wrapper .btn {
   padding: 10px 10px !important;
 }
-.sticky-wrapper.is-sticky .btn.free-download {
-  background: #2d71a1;
+.sticky-wrapper.is-sticky .site-navbar .btn.free-download {
+  background: #58C69B;
+  color: #fff !important;
 }
 .sticky-wrapper .site-navbar .btn.free-download:hover{
-  color: #2d71a1 !important  ;
+  color: #fff !important  ;
 }
 .sticky-wrapper.is-sticky .site-navbar .btn.free-download:hover{
   color: #fff !important  ;
@@ -1192,13 +1194,19 @@ figure figcaption {
   padding: 10px 10px !important;
 }
 .site-mobile-menu .btn.btn-outline-white {
-  border: 2px solid #2d71a1;
-  background: none;
-  color: #2d71a1;
+  border: 2px solid #58C69B;
+  background: #58C69B;
+  color: #fff;
 }
 .site-mobile-menu .btn.btn-outline-white:hover {
-  background: #2d71a1;
+  background: #58C69B;
   color: #fff;
+}
+.highlight-word {
+  color: #58c69b;
+}
+.post-entry .btn {
+  padding: 7px 15px !important;
 }
 /*--------------------------------------------------------------
 # Footer
