--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  color: #03030378;
+  color: #696969;
   line-height: 1.5;
 }
 
@@ -161,7 +161,7 @@ figure figcaption {
 }
 
 .feature-1 p {
-  color: #03030378;
+  color: #696969;
 }
 
 /* Step */
