--- a/css/style.css
+++ b/css/style.css
@@ -1279,6 +1279,9 @@ figure figcaption {
   position: absolute;
   top: 0;
 }
+.service-area h4 {
+  font-size: 1.1rem;
+}
 
 /*--------------------------------------------------------------
 # Footer
@@ -1387,4 +1390,423 @@ figure figcaption {
   .cta-section h2 {
     font-size: 2rem;
   }
+}
+
+
+/*--------------------------------------------------------------
+# price table
+--------------------------------------------------------------*/
+  
+/* =================== */
+/*   Pricing Cards     */
+/* =================== */
+.pricing-card {
+  position: relative;
+  border: 1px solid #ddd;
+  width: 100%;
+  top: 0;
+  -webkit-transition: all 0.2s linear 0s;
+          transition: all 0.2s linear 0s;
+  z-index: 99;
+}
+
+/* =================== */
+/*   Pricing Header    */
+/* =================== */
+.pricing-header {
+  background: #fff;
+  position: relative;
+  height: 200px;
+  border-bottom: 1px solid #1976d2;
+  margin: -1px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.pricing-header h5 {
+  background: #2196f3;
+  color: #fff;
+  font-size: 16px;
+  line-height: normal;
+  margin: 0 auto;
+  padding: 15px 20px;
+  text-transform: uppercase;
+}
+
+.pricing-header p {
+  margin: 0 auto;
+  color: #fff;
+  display: inline-block;
+  font-style: italic;
+}
+
+/* =================== */
+/*   Pricing Box       */
+/* =================== */
+.price-box {
+  border-radius: 100px;
+  display: block;
+  margin: 25px auto;
+  position: relative;
+  line-height: 100px;
+  height: 100px;
+  width: 100px;
+}
+
+.price-box:before {
+  border-radius: 50%;
+  box-shadow: 0 0 0 5px white inset, 0 1px 2px transparent;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.price-box .price {
+  color: #fff;
+  display: inline-block;
+  font-family: roboto;
+  font-size: 34px;
+  font-weight: 600;
+  position: relative;
+  letter-spacing: -2px;
+}
+
+.price-box .currency {
+  font-size: 50%;
+  font-weight: 600;
+  left: -10px;
+  line-height: inherit;
+  position: absolute;
+  top: -6px;
+  letter-spacing: 0;
+}
+
+.price-box .plan {
+  bottom: -26px;
+  font-family: roboto;
+  font-size: 36%;
+  font-weight: 400;
+  left: 0;
+  letter-spacing: 0px !important;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  text-transform: capitalize;
+}
+
+/* ============================ */
+/*   Pricing Feature(Content)   */
+/* ============================ */
+.pricing-feature {
+  position: relative;
+  text-align: left;
+}
+
+.pricing-feature li {
+  list-style: none;
+  padding: 13px 0;
+  border-bottom: 1px solid #ddd;
+  background: #eee;
+}
+
+.pricing-feature li:last-child {
+  border-bottom: none;
+}
+
+.pricing-feature li span {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.pricing-feature li span, .pricing-feature li i {
+  float: right;
+}
+
+.pricing-feature li p {
+  margin: 0;
+  font-size: 13.5px;
+  text-transform: capitalize;
+  padding: 0 20px;
+  line-height: normal;
+}
+
+/* ============================ */
+/*   Pricing Footer             */
+/* ============================ */
+.pricing-footer {
+  border-top: 1px solid #ddd;
+  padding: 0 20px;
+  height: 80px;
+  -webkit-transition: height 0.2s linear 0s;
+          transition: height 0.2s linear 0s;
+  text-align: center;
+}
+
+.pricing-footer a {
+  bottom: 0;
+  margin-top: 20px;
+  position: relative;
+}
+
+/* ======================= */
+/*   Pricing Comparison    */
+/* ======================= */
+.comparison-table [class*=col-] {
+  padding: 0;
+  margin: -1px;
+}
+
+.comparison-table .pricing-col {
+  padding: 20px 0;
+}
+
+.comparison-table [class*=col-]:first-child {
+  margin: 0;
+}
+
+.comparison-table [class*=col-]:first-child:hover {
+  top: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.comparison-table [class*=col-]:first-child:hover .pricing-card {
+  margin: 0;
+  box-shadow: none;
+}
+
+.comparison-table .pricing-feature li {
+  background: #fff;
+  text-align: center;
+}
+
+.comparison-table .pricing-feature li i {
+  line-height: normal;
+}
+
+.comparison-table .pricing-feature li span, .comparison-table .pricing-feature li i {
+  float: none;
+}
+
+.comparison-table .pricing-feature li:nth-child(2n+1) {
+  background: #eee;
+}
+
+.comparison-table .ribbon {
+  left: calc(100% - 124px);
+}
+
+.list-feature {
+  z-index: 0;
+}
+
+.pricing-header {
+  background: #fff !important;
+  padding: 30px 15px;
+  border-bottom-color: #ddd !important;
+  text-align: center;
+  margin-top: -2px;
+}
+
+.pricing-header h5 {
+  background: #fff !important;
+  color: #424242;
+  font-weight: 500;
+  font-size: 39px;
+  padding: 0;
+  margin-top: 30px;
+}
+
+.pricing-header p {
+  color: #444;
+  margin-top: 5px;
+}
+
+.pricing-feature {
+  text-align: left;
+}
+
+.pricing-col {
+  -webkit-transition: all 0.2s linear 0s;
+          transition: all 0.2s linear 0s;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  float: left;
+}
+
+.pricing-col:hover {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+.pricing-col:hover > .pricing-card {
+  top: 0px;
+  box-shadow: 0 0 20px -2px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all 0.2s linear 0s;
+          transition: all 0.2s linear 0s;
+  z-index: 101;
+}
+
+.pricing-col:hover > .pricing-card .pricing-footer {
+  height: 120px;
+}
+
+.pricing-col:hover > .pricing-card .pricing-footer a {
+  bottom: -20px;
+  position: relative;
+}
+
+
+.style-3 .pricing-card {
+  border: 1px solid #ddd;
+}
+
+.style-3 .pricing-header {
+  border-bottom: none;
+  margin: 0;
+  height: 180px;
+}
+
+.style-3 .pricing-header h5 {
+  background: #fff;
+  color: #424242;
+}
+
+.style-3 .price-box {
+  border-radius: 0;
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid #ddd;
+}
+
+.style-3 .price {
+  color: #616161;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.style-3 .currency {
+  top: 12px;
+  font-size: 22px;
+  left: -16px;
+  font-weight: 300;
+}
+
+.style-3 .plan {
+  bottom: 12px;
+  left: auto;
+  margin: 0;
+  left: calc(100% + 5px);
+  font-weight: 400;
+  font-size: 12px;
+  width: 50px;
+  text-align: left;
+  line-height: normal;
+}
+
+.style-3 .pricing-feature li {
+  background: #f5f5f5;
+}
+
+.style-3 .pricing-feature li:first-child {
+  border-top: 1px solid #ddd;
+}
+
+.style-3 .pricing-feature li span, .style-3 .pricing-feature li i {
+  float: right;
+}
+
+.style-3 .pricing-feature li:nth-child(2n+1) {
+  background: #eee;
+}
+
+.style-3 .ribbon {
+  top: 35%;
+  right: -10px;
+  left: auto;
+  border-radius: 0;
+}
+
+.style-3 .ribbon:after {
+  border-right: 10px solid transparent;
+  border-top: 7px solid rgba(0, 0, 0, 0.5);
+  bottom: -7px;
+  content: "";
+  position: absolute;
+  right: 0;
+}
+
+.style-3 .person .price {
+  color: #2196f3;
+}
+
+.style-3 .person .plan {
+  color: #757575;
+}
+
+.style-3 .corp .price {
+  color: #4caf50;
+}
+
+.style-3 .corp .plan {
+  color: #757575;
+}
+
+.style-3 .unlim .price {
+  color: #f44336;
+}
+
+.style-3 .unlim .plan {
+  color: #757575;
+}
+
+.style-3 .business .price {
+  color: #ffc107;
+}
+
+.style-3 .business .plan {
+  color: #757575;
+}
+
+.style-3 .pricing-footer {
+  background: #fff;
+}
+
+.style-3.comparison-table [class*=col-]:first-child {
+  margin: -1px;
+}
+
+.style-3.comparison-table .list-feature .pricing-header h5 {
+  margin-top: 0;
+  border-bottom: none;
+}
+
+.style-3.comparison-table .pricing-feature li p, .style-3.comparison-table .pricing-feature li i, .style-3.comparison-table .pricing-feature li span {
+  float: none;
+}
+
+.style-3 .pricing-footer .btn-act.btn-line {
+  background: none;
+  border-color: #2196f3;
+  color: #2196f3;
+}
+
+.style-3 .pricing-footer .btn-act.btn-line:hover {
+  background: #2196f3;
+  border-color: #2196f3;
+  color: #fff;
+}
+
+.style-3 .pricing-footer .btn-act.btn-bg {
+  background-color: #2196f3;
+  border-color: #2196f3;
+}
+
+.style-3 .pricing-footer .btn-act.btn-bg:hover {
+  background: #212121;
+  border-color: #212121;
 }
