--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@ body {
   font-family: "Roboto", sans-serif;
   color: #484848;
   line-height: 1.5;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 a {
